--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Jeu du "plus ou moins"</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <link rel="stylesheet" href="mystyle.css">
-    <script src="myScript.js"></script>
+    <script src="myscript.js"></script>
 
 </head>
 
 <body>
     <p>Commencez le jeu du "plus ou moins"</p>
     <button class="bouton" onclick="javascript:PoM_partie(1,100)">GO</button>
+    test
 </body>
 
 </html>
